crates/crucible-cli/src/tui/snapshots/crucible_cli__tui__render_tests__render_auto_empty.snap
---
source: crates/crucible-cli/src/tui/render_tests.rs
expression: render_state(&state)
---
┌Streaming─────────────────────────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Input─────────────────────────────────────────────────────────────────────────┐
│[Auto] >                                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
Mode: Auto │ Ready
