crates/crucible-cli/src/tui/snapshots/crucible_cli__tui__render_tests__render_narrow.snap
---
source: crates/crucible-cli/src/tui/render_tests.rs
expression: buffer_to_string(terminal.backend().buffer())
---
┌Streaming─────────────────────────────┐
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
┌Input─────────────────────────────────┐
│[Plan] > input                        │
└──────────────────────────────────────┘
Mode: Plan │ Ready
