crates/crucible-cli/src/tui/snapshots/crucible_cli__tui__render_tests__render_streaming.snap
---
source: crates/crucible-cli/src/tui/render_tests.rs
expression: render_state(&state)
---
┌Streaming─────────────────────────────────────────────────────────────────────┐
│Assistant: I am responding to your question... ▋                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Input─────────────────────────────────────────────────────────────────────────┐
│[Plan] >                                                                      │
└──────────────────────────────────────────────────────────────────────────────┘
Mode: Plan │ Ready
