crates/crucible-cli/src/tui/snapshots/crucible_cli__tui__render_tests__render_streaming_with_input.snap
---
source: crates/crucible-cli/src/tui/render_tests.rs
expression: render_state(&state)
---
┌Streaming─────────────────────────────────────────────────────────────────────┐
│Assistant: Processing your request... ▋                                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Input─────────────────────────────────────────────────────────────────────────┐
│[Act] > my question                                                           │
└──────────────────────────────────────────────────────────────────────────────┘
Mode: Act │ Ready
